--- a/src/pages/admin-site/components/news-form/index.module.scss
+++ b/src/pages/admin-site/components/news-form/index.module.scss
@@ -2,7 +2,7 @@
 
 
 .newsForm {
-  max-width: 1030px;
+  max-width: 1140px;
 
   h3 {
     @include opensans-bold;
@@ -23,13 +23,18 @@
   }
 }
 
-.newsFormFields {
+.newsFormLeftFields {
   flex-grow: 1;
-  max-width: 720px;
+  max-width: 830px;
+}
+
+.newsFormBottom {
+  max-width: 830px;
+  margin-bottom: 70px;
 }
 
 .asideSelect {
-  margin-bottom: 37px;
+  margin-bottom: 31px;
   @media (max-width: 1024px) {
     margin-bottom: 20px;
   }
@@ -41,6 +46,6 @@
 }
 
 .newsDropzone {
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 40px;
 }
