Список видео, форма добавления видео

--- a/src/pages/admin-site/admin-videotape-list/components/videos-table/index.module.scss
+++ b/src/pages/admin-site/admin-videotape-list/components/videos-table/index.module.scss
@@ -40,7 +40,7 @@
       td {
         background-color: #EDF2F6;
       }
-      .removeNewsBtn {
+      .removeVideosBtn {
         display: block;
       }
     }
